Font family changed after facing issues on small devices

--- a/style.css
+++ b/style.css
@@ -67,3 +67,17 @@ h2 {
     color: #444;
   }
 }
+
+@media (min-width: 500px) {
+  h1 {
+    font-size: 2.5rem;
+    text-align: center;
+    color: #333;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    text-align: center;
+    color: #444;
+  }
+}
